# playday

./: .dockerignore  .editorconfig  .env.example  .gitignore  .ignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  diesel.toml  docker-compose.yml  jsconfig.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
.github/workflows/: build-and-push-and-deploy.yml  build-and-push.yml
ansible/: main.yml
ansible/handlers/: main.yml
ansible/roles/app/defaults/: main.yml
ansible/roles/app/tasks/: main.yml
ansible/roles/app/templates/: docker-compose.yml.j2  nginx.conf.j2  playday.service.j2
migrations/2021-05-30-100301_create_users/: up.sql
migrations/2021-06-17-181500_create_wished_games/: down.sql  up.sql
migrations/2021-06-27-162201_update_wishlist_add_pc_release_dt/: down.sql  up.sql
migrations/2021-08-07-063809_create_game_stores/: down.sql  up.sql
migrations/2021-08-29-165833_update_game_stores_add_username/: down.sql  up.sql
playday/: Cargo.toml
playday/src/: db.rs  dtos.rs  epicgames.rs  igdb.rs  lib.rs  models.rs  schema.rs  tasks.rs  types.rs
playday_celery_beat/: Cargo.toml
playday_celery_beat/src/: main.rs
playday_celery_worker/: Cargo.toml
playday_celery_worker/src/: main.rs
playday_web/: Cargo.toml
playday_web/src/: main.rs  routes.rs
playday_web/static/src/: app.js
playday_web/static/src/vue/: App.vue
playday_web/static/src/vue/components/: add-games-to-wishlist.vue  game-card.vue  game-platform-icon.vue  game-store-icon.vue  library-settings.vue  modal-popup.vue  remove-game.vue
playday_web/templates/: index.html
src/: db.rs  igdb.rs  main.rs  models.rs  routes.rs  schema.rs  types.rs
static/src/: app.css  app.js
static/src/vue/: App.vue
static/src/vue/components/: add-games-to-wishlist.vue  game-card.vue  game-search-result.vue
templates/: index.html
