[package]
name = "playday"
version = "0.1.0"
authors = ["Neeraj Verma <github@smurfpandey.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
chrono = "0.4.19"
diesel = { version = "1.4.6", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
http = "0.2.4"
oauth2 = "4.0"
serde = "1.0"
serde_json = "1.0"
tera = "1.5.0"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[patch.crates-io]
oauth2 = { git = 'https://github.com/smurfpandey/oauth2-rs', branch = "main" }
