[package]
name = "playday"
version = "0.1.0"
authors = ["Neeraj Verma <github@smurfpandey.me>"]
edition = "2018"
license = "MIT"

[lib]
name = "playday"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
celery = "0.4.0-rc6"
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2", "serde_json", "uuidv07"] }
diesel_migrations = "1.4.0"
env_logger = "0.8.3"
http = "0.2.4"
log = "0.4"
oauth2 = "4.0"
r2d2 = "0.8.9"
sentry = "0.21.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
